# opendashfrance

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  app.py  cache.py  config.py  fetcher.py  geocode.py
backend/registry/: __init__.py  base.py  factories.py  sources.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  dashboard.js  gallery.js  search.js  state.js  themes.js
frontend/js/widgets/: carte.js  graphe.js  index.js  liste.js  stat.js  tableau.js
tests/: conftest.py  test_cache.py  test_fetcher.py  test_parsers.py
tests/fixtures/: air.json  ban.json  carburants.json  dvf.json  entreprises.json  geo_commune.json  hydro.json  jours_feries.json  meteo.json  openfoodfacts.json
